--- a/taravel/payments/locale/pl/LC_MESSAGES/django.po
+++ b/taravel/payments/locale/pl/LC_MESSAGES/django.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-30 10:55+0000\n"
-"PO-Revision-Date: 2016-04-30 12:57+0200\n"
+"POT-Creation-Date: 2016-04-30 11:19+0000\n"
+"PO-Revision-Date: 2016-04-30 13:19+0200\n"
+"Last-Translator: Adam Dobrawy <naczelnik@jawnosc.tk>\n"
+"Language-Team: \n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
-"Last-Translator: Adam Dobrawy <naczelnik@jawnosc.tk>\n"
-"Language-Team: \n"
 "X-Generator: Poedit 1.8.7.1\n"
 
 #: models.py:12
@@ -33,7 +33,7 @@ msgstr "Forma płatności"
 
 #: models.py:27
 msgid "Creation date"
-msgstr ""
+msgstr "Data utowrzenia"
 
 #: models.py:31
 msgid "Payment"
@@ -59,7 +59,7 @@ msgstr "Nieopłacone"
 #: templates/payments/_payment_detail.html:3
 #: templates/payments/_payment_mini.html:3
 msgid "Payment details "
-msgstr "Szczegóły płatnośc"
+msgstr "Szczegóły płatności"
 
 #: templates/payments/_payment_detail.html:5
 msgid "Cashier"
