--- a/taravel/locations/locale/pl/LC_MESSAGES/django.po
+++ b/taravel/locations/locale/pl/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-05-10 22:39+0000\n"
+"POT-Creation-Date: 2016-05-10 23:30+0000\n"
 "PO-Revision-Date: 2016-04-09 18:30+0200\n"
 "Last-Translator: Adam Dobrawy <naczelnik@jawnosc.tk>\n"
 "Language-Team: \n"
@@ -18,6 +18,10 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
 "X-Generator: Poedit 1.8.4\n"
+
+#: apps.py:9 models.py:51
+msgid "Locations"
+msgstr "Miejsca"
 
 #: models.py:22
 msgid "Continent"
@@ -50,10 +54,6 @@ msgstr "Pozycja"
 #: models.py:50
 msgid "Location"
 msgstr "Miejsce"
-
-#: models.py:51
-msgid "Locations"
-msgstr "Miejsca"
 
 #: templates/locations/location_form.html:6
 msgid "Add country"
