--- a/taravel/payments/locale/pl/LC_MESSAGES/django.po
+++ b/taravel/payments/locale/pl/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-05-10 23:06+0000\n"
+"POT-Creation-Date: 2016-05-10 23:30+0000\n"
 "PO-Revision-Date: 2016-05-11 01:07+0200\n"
 "Last-Translator: Adam Dobrawy <naczelnik@jawnosc.tk>\n"
 "Language-Team: \n"
@@ -18,6 +18,10 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
 "X-Generator: Poedit 1.8.7.1\n"
+
+#: apps.py:9 models.py:36
+msgid "Payments"
+msgstr "Płatności"
 
 #: models.py:12
 msgid "Name"
@@ -46,10 +50,6 @@ msgstr "Data utowrzenia"
 #: models.py:35
 msgid "Payment"
 msgstr "Płatność"
-
-#: models.py:36
-msgid "Payments"
-msgstr "Płatności"
 
 #: models.py:40
 #, python-format
