--- a/taravel/trips/locale/pl/LC_MESSAGES/django.po
+++ b/taravel/trips/locale/pl/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-05-10 22:39+0000\n"
+"POT-Creation-Date: 2016-05-10 23:30+0000\n"
 "PO-Revision-Date: 2016-05-11 00:39+0200\n"
 "Last-Translator: Adam Dobrawy <naczelnik@jawnosc.tk>\n"
 "Language-Team: \n"
@@ -18,6 +18,10 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
 "X-Generator: Poedit 1.8.7.1\n"
+
+#: apps.py:9 models.py:57
+msgid "Trips"
+msgstr "Wycieczki"
 
 #: filters.py:19 filters.py:21
 msgid "Price (ascending)"
@@ -74,10 +78,6 @@ msgstr "Obraz"
 #: models.py:56 models.py:70
 msgid "Trip"
 msgstr "Wycieczka"
-
-#: models.py:57
-msgid "Trips"
-msgstr "Wycieczki"
 
 #: models.py:78
 msgid "Images"
