--- a/taravel/locations/locale/pl/LC_MESSAGES/django.po
+++ b/taravel/locations/locale/pl/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-05-10 23:30+0000\n"
-"PO-Revision-Date: 2016-04-09 18:30+0200\n"
+"POT-Creation-Date: 2016-05-10 23:33+0000\n"
+"PO-Revision-Date: 2016-05-11 01:34+0200\n"
 "Last-Translator: Adam Dobrawy <naczelnik@jawnosc.tk>\n"
 "Language-Team: \n"
 "Language: pl\n"
@@ -17,11 +17,39 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 1.8.4\n"
+"X-Generator: Poedit 1.8.7.1\n"
 
 #: apps.py:9 models.py:51
 msgid "Locations"
 msgstr "Miejsca"
+
+#: models.py:13
+msgid "Asia"
+msgstr "Azja"
+
+#: models.py:14
+msgid "Africa"
+msgstr "Afryka"
+
+#: models.py:15
+msgid "North America"
+msgstr "Ameryka północna"
+
+#: models.py:16
+msgid "South America"
+msgstr "Ameryka południowa"
+
+#: models.py:17
+msgid "Antarctica"
+msgstr "Antarktyda"
+
+#: models.py:18
+msgid "Europe"
+msgstr "Europa"
+
+#: models.py:19
+msgid "Australia"
+msgstr "Australia"
 
 #: models.py:22
 msgid "Continent"
