--- a/taravel/addresses/locale/pl/LC_MESSAGES/django.po
+++ b/taravel/addresses/locale/pl/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-05-10 23:30+0000\n"
-"PO-Revision-Date: 2016-04-09 16:44+0200\n"
+"POT-Creation-Date: 2016-05-10 23:32+0000\n"
+"PO-Revision-Date: 2016-05-11 01:32+0200\n"
 "Last-Translator: Adam Dobrawy <naczelnik@jawnosc.tk>\n"
 "Language-Team: \n"
 "Language: pl\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 1.8.4\n"
+"X-Generator: Poedit 1.8.7.1\n"
 
 #: apps.py:9 models.py:31
 msgid "Addresses"
@@ -41,7 +41,7 @@ msgstr "Numer ulicy"
 
 #: models.py:22
 msgid "Postcode"
-msgstr "Kod pocztow"
+msgstr "Kod pocztowy"
 
 #: models.py:23
 msgid "City"
